# muster

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPECIFICATION.md  clickable-notifications-postmortem.md  demo-notifications.sh  terminal-notification-research.md
.config/: nextest.toml
.github/workflows/: close-external-prs.yml  docs.yml
.nextest/: config.toml
crates/muster/: Cargo.toml
crates/muster-cli/: Cargo.toml
crates/muster-cli/examples/: gen_cli_docs.rs
crates/muster-cli/src/: cli.rs  editing.rs  format.rs  main.rs  terminal.rs
crates/muster-cli/src/commands/: adopt.rs  attach.rs  inspect.rs  launch.rs  list.rs  mod.rs  new.rs  profile.rs  release.rs  shell_init.rs
crates/muster-notify/: Cargo.toml
crates/muster-notify/src/: main.rs
crates/muster/src/: error.rs  lib.rs  muster.rs
crates/muster/src/config/: mod.rs  profile.rs  settings.rs
crates/muster/src/session/: mod.rs  theme.rs
crates/muster/src/tmux/: client.rs  control.rs  mod.rs  types.rs
docs/: book.toml  compliance-plan.md
docs/src/: SUMMARY.md  cli-reference.md  introduction.md
docs/src/architecture/: library-usage.md  overview.md  tmux-interface.md
docs/src/development/: contributing.md  testing.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/user-guide/: concepts.md  configuration.md  notifications.md  peek.md  pin-unpin.md  profiles.md  sessions.md  workflows.md
