[package]
name = "muster-notify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native macOS notification helper for Muster with click-to-source"

[[bin]]
name = "muster-notify"
path = "src/main.rs"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject", "NSSet", "NSArray", "NSError"] }
objc2-user-notifications = { version = "0.3", features = [
    "UNUserNotificationCenter",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationAction",
    "UNNotificationCategory",
    "UNNotificationResponse",
    "UNNotificationSound",
    "UNNotification",
    "UNNotificationSettings",
    "block2",
] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"] }
block2 = "0.6"
which = { workspace = true }
